--- a/src/main/resources/il8n/messages/messages_en_US.properties
+++ b/src/main/resources/il8n/messages/messages_en_US.properties
@@ -1,15 +1,29 @@
-not.saving.or.current.account = Not a SAV or a Current Account type
-fail.to.call.system.parameters = Failed to call system parameters
-customer.not.found = Customer Not Found
-refaccoutnumber.not.found = refaccountnumber Not Found
-input.currency.code.not.support = The inputted currency code is not supported in this account type
-access.forbidden = access forbidden
-please.leave.relaccountnumber.blank = Please leave the relaccountnumber blank
-cutomer.contact.info.has.changed = -Customer Contact Information already changed
-creation.succeeded = Creation Succeeded
-create.account.type.not.supported = Creating an account of this account type is not supported
-record.not.found = Record Not Found
-handle.success = handle success
-fail.generate.available.number = failed to generate a available number
+#not.saving.or.current.account = Not a SAV or a Current Account type
+#fail.to.call.system.parameters = Failed to call system parameters
+#customer.not.found = Customer Not Found
+#refaccoutnumber.not.found = refaccountnumber Not Found
+#input.currency.code.not.support = The inputted currency code is not supported in this account type
+#access.forbidden = access forbidden
+#please.leave.relaccountnumber.blank = Please leave the relaccountnumber blank
+#cutomer.contact.info.has.changed = -Customer Contact Information already changed
+#creation.succeeded = Creation Succeeded
+#create.account.type.not.supported = Creating an account of this account type is not supported
+#record.not.found = Record Not Found
+#handle.success = handle success
+#fail.generate.available.number = failed to generate a available number
 
 accountnumber.cannot.same.with.refaccountnumer = accountnumber can't be same with refaccountnumber
+td.record.has.drawn.down = TD record has been drawn down
+notsupported.contract.period = Unsupported Contract Period
+amount.not.support.termdeposit = This amount is not supported for termdeposit
+insufficient.fund = Insufficient Fund
+account.number.not.found = Account Number Not Found
+td.number.not.exist = Tdnumber does not exist
+debit.account.number.not.found = debitAccountNumber Not Found
+not.a.current.account = not a current account 
+active.not.active = Account Not Active
+td.account.number.not.found = TdAccountNumber Not Found-Please check whether the TdAccountNumber is correct
+transaction.not.matured.for.renewal = The transaction is not matured for renewal
+insert.transaction.failed = Insert Transaction Failed
+transaction.accepted = Transaction Accepted
+record.not.found = Record Not Found
